--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,18 +1,8 @@
 [phases.setup]
-nixPkgs = ["python312", "gcc11", "cmake"]
+nixPkgs = ["..."]
 
 [phases.install]
-cmds = [
-  "pip install --upgrade pip setuptools wheel",
-  "pip install --no-cache-dir numpy==1.26.4",
-  "pip install --no-cache-dir scipy==1.11.4", 
-  "pip install --no-cache-dir pandas==2.1.4",
-  "pip install --no-cache-dir scikit-learn==1.3.2",
-  "pip install --no-cache-dir catboost==1.2",
-  "pip install --no-cache-dir -r requirements.txt"
-]
-
-[phases.build]
+cmds = ["pip install --no-cache-dir -r requirements.txt"]
 
 [start]
 cmd = "cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT"
