--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,5 @@
 {
     "buildCommand": "npm run build",
     "outputDirectory": "dist",
-    "framework": "vite",
-    "rewrites": [
-        {
-            "source": "/api/:path*",
-            "destination": "https://financial-distress-predictor.onrender.com/:path*"
-        }
-    ]
+    "framework": "vite"
 }
