--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-catboost==1.2
-scikit-learn==1.3.2
-pandas==2.1.4
-numpy==1.26.4
-scipy==1.11.4
-
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-pydantic==2.5.2
-python-dotenv==1.0.0
-
-joblib==1.3.2
-pillow==10.1.0
-gunicorn==21.2.0
+catboost
+scikit-learn
+pandas
+numpy
+scipy
+shap
+matplotlib
+fastapi
+uvicorn[standard]
+python-multipart
+pydantic
+python-dotenv
+joblib
+pillow
+gunicorn
